--- a/hello_agent/pyproject.toml
+++ b/hello_agent/pyproject.toml
@@ -3,17 +3,8 @@ name = "hello-agent"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "MaliaRK", email = "maliaraees2@gmail.com" }
-]
 requires-python = ">=3.13"
 dependencies = [
-    "chainlit>=2.5.5",
+    "openai-agents>=0.0.16",
+    "python-dotenv>=1.1.0",
 ]
-
-[project.scripts]
-hello-agent = "hello_agent:main"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
